# quick-tool

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile.server  LICENSE  README.md  docker-compose.yml
crates/qt-client/: Cargo.toml  build.rs
crates/qt-client/src/: app.rs  main.rs
crates/qt-client/src/config/: default.toml  hotkey.rs  mod.rs  offline.rs  server.rs
crates/qt-client/src/hotkey/: mod.rs  platform.rs  wayland.rs  x11.rs
crates/qt-client/src/ui/: floating.rs  launcher.rs  market.rs  mod.rs  search.rs  server_list.rs  server_manager.rs  settings.rs  tool_list.rs
crates/qt-client/src/window/: layer.rs  mod.rs
crates/qt-core/: Cargo.toml
crates/qt-core/src/: crypto.rs  error.rs  lib.rs  types.rs
crates/qt-runtime/: Cargo.toml
crates/qt-runtime/src/: engine.rs  instance.rs  lib.rs  loader.rs  sandbox.rs
crates/qt-runtime/src/capability/: clipboard.rs  fs.rs  mod.rs  network.rs  screen.rs
crates/qt-sdk/: Cargo.toml
crates/qt-sdk/src/: lib.rs
crates/qt-sdk/src/api/: clipboard.rs  crypto.rs  http.rs  mod.rs  storage.rs
crates/qt-sdk/src/component/: common.slint
crates/qt-server/: Cargo.toml
crates/qt-server/src/: main.rs
crates/qt-server/src/api/: auth.rs  backup.rs  mod.rs  tools.rs
crates/qt-server/src/db/: mod.rs  schema.rs
crates/qt-server/src/service/: backup.rs  mod.rs  tool.rs  user.rs
docs/: debug-commands.md  offline-mode.md  plugin-development.md  server-deployment.md
proto/: openapi.yaml
tools/markdown-note/: Cargo.toml
tools/markdown-note/src/: lib.rs  main.rs
tools/password-manager/: Cargo.toml
tools/password-manager/src/: lib.rs  main.rs
