[workspace]
resolver = "2"
members = [
    "crates/qt-core",
    "crates/qt-client",
    "crates/qt-runtime",
    "crates/qt-sdk",
    "crates/qt-server",
    "tools/markdown-note",
    "tools/password-manager",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Quick Tool Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/quick-tool/quick-tool"

[workspace.dependencies]
# GUI
slint = "1.5"

# WASM Runtime
wasmtime = "18"
wasmtime-wasi = "18"

# Wayland
ashpd = "0.8"
smithay-client-toolkit = "0.19"

# X11
x11rb = "0.13"

# Server
axum = "0.7"
tower = "0.4"
tower-http = "0.5"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Crypto
argon2 = "0.5"
aes-gcm = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
qt-core = { path = "crates/qt-core" }
qt-sdk = { path = "crates/qt-sdk" }
qt-runtime = { path = "crates/qt-runtime" }